# julep-examples

./: README.md
community-feedback/: README.md  app.py  prompts.py  requirements.txt  tools.py
community-feedback/.chainlit/: config.toml
cookbooks/: julep-composio.py  llama3-function-calling.ipynb  master-cookbook.ipynb
dungeon-master/: .env.example  README.md  app.py  pyproject.toml
dungeon-master/.chainlit/: config.toml
