[tool.poetry]
name = "rpg-chat"
version = "0.1.0"
description = ""
authors = ["Philip <philip.balbas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.14"
chainlit = "^1.0.505"
julep = "^0.2.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
